syntax = "proto3";
package v1;

option go_package = "./pkg/api/v1";

message ToDo {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message CreateRequest{
  string api = 1;
  ToDo toDo = 2;
}

message CreateResponse{
  string api = 1;
  int64 id = 2;
}

message ReadRequest{
  string api = 1;
  int64 id = 2;
}

message ReadResponse{
  string api = 1;
  ToDo toDo = 2;
}

service ToDoService {
  rpc Create(CreateRequest) returns (CreateResponse) {};
  rpc Read(ReadRequest) returns (ReadResponse) {};
}
